Bug 193007: export PR_CreateThread and PR_SetError and new NSPR 4.3 symbols.  Added stubs so that PR_CreateThread ended up in its old position. The patch is contributed by Colin Blakes <colin@theblakes.com>. Modified Files: nspr_symvec.opt md/unix/openvms.c